# plugins_example_operation

./: README.md  setup.cfg
core_software/: __init__.py  __main__.py  funny_bone.py  operation.py  tennis_elbow.py
core_software.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core_software/operations/: hammer_toes.py
