[metadata]
name = core-software
version = 0.0.1

[options]
packages = find:
install_requires =
    python_version > "3.8"

[options.entry_points]
core_software.operations =
    HammerToes = core_software.operations.hammer_toes:HammerToes
console_scripts =
    play-operation = core_software:play_operation